[package]
name = "cli_caching_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
caching_proxy_sever = { version = "0.1.0", path = "../caching_proxy_sever" }
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json", "blocking"] }